# FastTender

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_item_unique_article_per_source.py  0003_item_category_path.py  0004_item_unique_only_active.py  0005_item_code_1c.py  0006_unique_article_per_brand.py  0007_supplier_prefix_and_sku.py  0008_catalog_link.py  0009_specification_cancelled.py  0010_item_prices.py  0011_client_directory.py  0012_specification_requisites.py  0013_trading_platform.py  0014_gold_row.py  0015_spec_matched_count.py  0016_spec_item_attributes.py  0017_spec_bookmark.py  0018_verification_forwarded.py
deploy/: .env.prod.example  Caddyfile  DIAGNOSTICS.md  OPERATIONS.md  README.md  RECOVERY.md  backup-cron.sh  bootstrap.sh  cleanup-deactivated.sh  events-monitor.sh  state-snapshot.sh
docs/: BACKLOG.md  FastTender_revizia_interfeysa.html  Price_MIL.xlsx  ROADMAP.md  architecture_document.md  dedup.csv  design_manual_column_mapping.md  gold_dataset_template_new.xlsx  spec_page_revision_plan.md  uptrade_integration.md
docs/pricelists/: README.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppLayout.tsx  CandidatesTable.tsx  CatalogSearchBox.tsx  ConfidenceCell.tsx  ImportPanel.tsx  ProgressBar.tsx  SpecItemRow.tsx  SpecMetrics.tsx
frontend/src/hooks/: useColumnWidths.ts
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: CatalogPage.tsx  ClientsPage.tsx  GoldDatasetPage.tsx  SpecificationDetailPage.tsx  SpecificationUploadPage.tsx  SpecificationsListPage.tsx  (+2 more)
scripts/: rematch_existing.py
src/fasttender/: __init__.py  main.py
tests/: conftest.py  test_health.py  test_matcher_adapters.py  test_matcher_engine.py  test_matcher_reranker.py  test_models_imports.py  test_parser_csv.py  test_parser_excel.py  test_parser_header_detector.py  test_parser_price_columns.py  test_parser_prices.py  test_parser_value_normalizer.py  test_supplier_transformations.py
tests/fixtures/: spec_builders.py
tests/integration/: conftest.py  test_catalog_import.py  test_catalog_large_replace.py  test_catalog_link.py  test_catalog_replace_idempotent.py  test_catalog_search.py  test_category_path.py  test_clients_api.py  test_code_1c.py  test_dedupe_per_brand.py  test_eval_gold.py  test_export.py  test_gold_api.py  test_matching_engine_e2e.py  test_matching_name_only_e2e.py  test_pg_trgm_search.py  test_pipeline.py  test_pricelist_import.py  test_specifications_api.py  test_supplier_sku.py  test_suppliers_settings_api.py  test_trading_platforms_api.py  test_verification.py
(+68 files in other folders)
